@@ -17,7 +17,7 @@ Jython 2.5.2a1
     - [ 1396 ] Assigning os module funcs as class attributes incompatible with CPython
     - [ 1504 ] Inheriting twice from the same Java interface causes MRO problems
     - [ 1511 ] PySet doesn't support Java serialization
-    - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
+    - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
     - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
     - [ 1576 ] files opened in 'a+' mode not readable
     - [ 1563 ] unicode() for Java objects working differently in 2.2 and 2.5
@@ -27,6 +27,7 @@ Jython 2.5.2a1
     - [ 1534 ] new style object __dict__[name] ignored
     - [ 1479 ] xml parser file lock
     - [ 1582 ] com.ziclix.python.sql.PyConnection leaks memory
+    - [ 1520 ] os.listdir doesn't return unicode when requested
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
